// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WithMainNav /> should print warning when missing component prop 1`] = `
"Warning: Failed prop type: The prop \`component\` is marked as required in \`WithMainNav\`, but its value is \`undefined\`.
    in WithMainNav"
`;

exports[`<WithMainNav /> should print warnings when missing history and firebase props 1`] = `
"Warning: Failed prop type: The prop \`history\` is marked as required in \`MainNav\`, but its value is \`undefined\`.
    in MainNav (created by withStyles(MainNav))
    in withStyles(MainNav) (created by WithMainNav)
    in div (created by WithMainNav)
    in WithMainNav"
`;

exports[`<WithMainNav /> should print warnings when missing history and firebase props 2`] = `
"Warning: Failed prop type: The prop \`firebase\` is marked as required in \`MainNav\`, but its value is \`undefined\`.
    in MainNav (created by withStyles(MainNav))
    in withStyles(MainNav) (created by WithMainNav)
    in div (created by WithMainNav)
    in WithMainNav"
`;
